Generics_Interface/Code1_error_report.txt
javac errors for Code1.java 
Code1.java:18: error: incompatible types: cannot infer type arguments for OrderedPair<>
		OrderedPair<String, Integer> p4 = new OrderedPair<>(new Employee("John"), "Doe"); // Error
		                                                 ^
    reason: inference variable K has incompatible bounds
      equality constraints: String
      lower bounds: Employee
  where K is a type-variable:
    K extends Object declared in class OrderedPair
1 error
 
========================= 
ExtendJ errors for Code1.java 
 
========================= 
Eclipse ECJ errors for Code1.java 
----------
1. ERROR in C:\Users\Abeer Faiz Farid\Desktop\MSc Software Engineering\Semester 3\CodeRepo\Generics_Interface\Code1.java (at line 18)
	OrderedPair<String, Integer> p4 = new OrderedPair<>(new Employee("John"), "Doe"); // Error
	                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Cannot infer type arguments for OrderedPair<>
----------
1 problem (1 error)
